--- a/src/assets/sass/sections/_TheHero.scss
+++ b/src/assets/sass/sections/_TheHero.scss
@@ -13,7 +13,8 @@
 .hero__col--illustration {
   position: relative;
   width: 100%;
-  height: 67vw;
+  height: 68vw;
+  max-width: 850px;
   isolation: isolate;
   margin-bottom: 2.6vw;
 
@@ -28,25 +29,31 @@
   }
 
   &::before {
-    width: 83%;
+    width: calc(100% - 23vw);
     height: 84%;
-    right: 0;
     top: 20%;
     background-color: $soft-blue;
     border-radius: 5000px 0 0 5000px;
+    left: 23vw;
 
     @include query(md) {
-      width: 70%;
+      width: calc(100% - 9vw);
       height: 73%;
       top: 30%;
+      left: 9vw;
     }
   }
-
+  
   &::after {
     width: 100%;
     height: 100%;
     background: url("assets/images/illustration-hero.svg") center no-repeat;
     background-size: 100%;
+  }
+
+  @media screen and (min-width: 567px) and (max-width: 767px) {
+    height: 54vw;
+    &::after { background-size: 80% }
   }
 }
 
